[project]
name = "langgraphdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "langgraph==1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
]
